src/objects/Field__c.object
<CustomObject>
    <fields>
        <fullName>API__c</fullName>
        <label>API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent Field</label>
        <referenceTo>Field__c</referenceTo>
        <relationshipLabel>Fields</relationshipLabel>
        <relationshipName>Form_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_Header__c</fullName>
        <label>Field Header</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>List_Card_Display__c</fullName>
        <label>Display Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Content</fullName>
                    <default>true</default>
                    <label>Content</label>
                </value>
                <value>
                    <fullName>Header</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox to check if the question is required</description>
        <inlineHelpText>Is it required?</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <referenceTo>Form_Section__c</referenceTo>
        <relationshipLabel>Fields</relationshipLabel>
        <relationshipName>Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Style__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class</label>
        <referenceTo>Content_Container__c</referenceTo>
        <relationshipLabel>Fields</relationshipLabel>
        <relationshipName>Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validation_Type__c</fullName>
        <label>Validation Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Field</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Section__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{000}</displayFormat>
        <label>Field Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fields</pluralLabel>
    <recordTypes>
        <fullName>Text_Input</fullName>
        <active>true</active>
        <description>Input Field of type Text</description>
        <label>Text Input</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>